# Automatei

./: CMakeLists.txt  README.md  main.cpp
src/: color.h  engine.cpp  engine.h  grid.cpp  grid.h  renderer.cpp  renderer.h
